web/beezuscomplex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beezuscomplex
  namespace: web
spec:
  selector:
    matchLabels:
      app: beezuscomplex
  replicas : 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: beezuscomplex
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: beezuscomplex
          image: library/ghost:latest
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: beezuscomplex
              mountPath: /var/lib/ghost/content
            - name: beezuscomplex-conf
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
      volumes:
        - name: beezuscomplex
          persistentVolumeClaim:
            claimName: beezuscomplex
        - name: beezuscomplex-conf
          configMap:
            name: beezuscomplex-conf
            items:
              - key: production.json
                path: config.production.json
